--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
       <div id="time2">
         <form id="blue">
           <h1>Time 2</h1>
+          <input type="text" placeholder="Tamanho da trave azul" id="input-trave-azul">
+          <input type="submit" placeholder="Definir">
         </form>
       </div>
     </main>
