--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <form id="red">
           <h1>Time 1</h1>
           <input type="text" placeholder="Tamanho da trave vermelha" id="input-trave-verm">
+          <input type="text" placeholder="Quantidade de bolas vermelhas" id="qtd-bolas-verm">
           <input type="submit" placeholder="Definir">
         </form>
       </div>
@@ -28,6 +29,7 @@
         <form id="blue">
           <h1>Time 2</h1>
           <input type="text" placeholder="Tamanho da trave azul" id="input-trave-azul">
+          <input type="text" placeholder="Quantidade de bolas azuis" id="qtd-bolas-azuis">
           <input type="submit" placeholder="Definir">
         </form>
       </div>
