--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <h1>Time 1</h1>
           <input type="text" placeholder="Tamanho da trave vermelha" id="input-trave-verm">
           <input type="text" placeholder="Quantidade de bolas vermelhas" id="qtd-bolas-verm">
+          <input type="text" placeholder="Velocidade das bolas vermelhas" id="vlc-bolas-verm">
           <input type="submit" placeholder="Definir">
         </form>
       </div>
@@ -30,6 +31,7 @@
           <h1>Time 2</h1>
           <input type="text" placeholder="Tamanho da trave azul" id="input-trave-azul">
           <input type="text" placeholder="Quantidade de bolas azuis" id="qtd-bolas-azuis">
+          <input type="text" placeholder="Velocidade das bolas azuis" id="vlc-bolas-azuis">
           <input type="submit" placeholder="Definir">
         </form>
       </div>
