--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <div id="canvas">
         <canvas></canvas>
         <input type="button" value="start" id="buttonStart">
+        <input type="button" value="reset" id="buttonReset">
       </div>
       <div id="time2">
         <form id="blue">
