--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
 <body>
   <header class="scoreboard text-center py-3">
-    <h1>FutBola</h1>
+    <h1>FutBola 👍</h1>
     <div class="scores fs-2">
       <span id="score-red">0</span> x <span id="score-blue">0</span>
     </div>
